--- a/terraform-ci.yml
+++ b/terraform-ci.yml
@@ -1,6 +1,6 @@
 terraform {
   backend "s3" {
-    bucket = "sreyas-backend" 
+    bucket = "sreyas-backend1" 
     key    = "terraform"
     region = "eu-west-1"
     encrypt= true
